# arduino-simple-rpc

./: .gitignore  .readthedocs.yaml  .travis.yml  README.rst  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
docs/: api.rst  cli.rst  conf.py  credits.rst  index.rst  install.rst  introduction.rst  library.rst  requirements.txt  usage.rst
docs/api/: extras.rst  protocol.rst  simple_rpc.rst
examples/: demo.py  wsgi.py
examples/demo/: demo.py
examples/wifi/: socket_speed_patch.py  wifi.py
examples/wsgi/: wsgi.py
simple_rpc/: __init__.py  cli.py  extras.py  io.py  protocol.py  simple_rpc.py
tests/: conf.py  conftest.py  test_cli.py  test_device.py  test_io.py  test_protocol.py  test_simple_rpc.py
