[metadata]
name = arduino-simple-rpc
version = 2.0.0
description = Arduino simpleRPC API client library and CLI.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = jlaros@fixedpoint.nl
url = https://arduino-simple-rpc.readthedocs.io
keywords =
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
copyright = 2018

[options]
packages = find:
install_requires =
    configparser
    pyserial

[options.package_data]
simple_rpc = setup.cfg

[options.entry_points]
console_scripts =
    simple_rpc = simple_rpc.cli:main
