[metadata]
name = arduino-simple-rpc
version = 2.4.2
description = Arduino simpleRPC API client library and CLI.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = jlaros@fixedpoint.nl
url = https://arduino-simple-rpc.readthedocs.io
keywords =
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    PyYAML>=5.3.1
    pyserial>=3.4

[options.entry_points]
console_scripts =
    simple_rpc = simple_rpc.cli:main

[flake8]
per-file-ignores =
    docs/conf.py: E402
    examples/wifi/wifi.py: F401
    examples/wsgi/wsgi.py: F401
    simple_rpc/__init__.py: F401
    simple_rpc/simple_rpc.py: E252
